--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
-    "typings" : "typings"
+    "typings": "typings"
   },
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.6",
-    "systemjs": "0.19.20",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "express": "^4.13.4",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
+    "systemjs": "0.19.20",
     "zone.js": "0.5.14"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
     "lite-server": "^2.0.1",
+    "mongodb": "^2.1.7",
     "typescript": "^1.7.5",
-    "typings":"^0.6.8"
+    "typings": "^0.6.8"
   },
-  "author": "",
-  "license": "ISC"
+  "author": ""
 }
